objects/vlocity_ins__InsuranceClaimRecovery__c.object
<CustomObject>
    <description>Represents a recovery of funds on an insurance claim through subrogation and salvage activities. Recovered amounts may come from a salvage company or through legal litigation or arbitration. Master-detail child object of Claim.</description>
    <fields>
        <fullName>vlocity_ins__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssignmentDate__c</fullName>
        <label>Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Claim Recovery</relationshipLabel>
        <relationshipName>ClaimRecovery</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CollectionsAssignmentDate__c</fullName>
        <label>Collections Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatusAsOfDate__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salvage</fullName>
                </value>
                <value>
                    <fullName>Subrogation</fullName>
                </value>
                <value>
                    <fullName>Litigation</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Claim Recovery</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Recovery</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>